--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
